Improve documentation text.

--- a/main.tex
+++ b/main.tex
@@ -84,10 +84,10 @@ a reference for project developers and testers.
 
 \subsection{Scope}
 \paragraph{}
-The scope of TestGen Pro includes the development of a web-based application and a
-command-line interface (CLI) for test case generation, review, and management. The
-software will be designed to support test automation and integration into CI/CD
-pipelines.
+The scope of \textbf{Test Case Generator} includes the development of a web-based
+application and a command-line interface (CLI) for test case generation, review,
+and management. The software will be designed to support test automation and
+integration into CI/CD pipelines.
 
 \subsection{Intended Users}
 \begin{itemize}
@@ -124,9 +124,9 @@ It reduces coder's efforts and saves their time.
 
 \subsection{Production Functions}
 \begin{itemize}
-    \item The system should allow a user to select a option among various data types.
-    \item The system should allow a user to give a range for result.
-    \item The system should allow a user to choose result in different forms.
+    \item The system allows a user to select a option among various data types.
+    \item The system allows a user to give a range for result.
+    \item The system allows a user to choose result in different forms.
 \end{itemize}
 
 \subsection{Operating Environment}
@@ -298,18 +298,9 @@ Data transmission must be encrypted using SSL/TLS to protect sensitive informati
 User authentication and authorization mechanisms should be robust and secure.
 Regular security audits and vulnerability assessments should be conducted.
 
-\subsection{Data Privacy}
-\paragraph{}
-The software should comply with relevant data privacy regulations (e.g., GDPR, HIPAA) if applicable.
-Implement data anonymization and encryption where necessary.
-
-\subsection{Accessibility}
-\paragraph{}
-The user interface must be accessible to users with disabilities and compliant with accessibility standards (e.g., WCAG).
-
 \subsection{Reliability}
 \paragraph{}
-The software should be highly reliable, with minimal downtime.
+The software is highly reliable, with minimal downtime.
 Implement mechanisms for data backup and recovery in case of system failures.
 
 \subsection{Compatibility}
@@ -324,7 +315,7 @@ Format dates, times, and numbers according to the user's locale.
 
 \subsection{User Support}
 \paragraph{}
-Offer channels for user support and feedback, such as email, chat, or a helpdesk system.
+The system offers channels for user support and feedback, such as email, chat, or a helpdesk system.
 Ensure timely responses to user inquiries and issues.
 
 \subsection{Regulatory Compliance}
@@ -333,8 +324,8 @@ Comply with industry-specific regulations and standards, where applicable (e.g.,
 
 \subsection{Usability}
 \paragraph{}
-The user interface should be intuitive and user-friendly.
-Conduct user testing to gather feedback for usability improvements.
+The user interface of the software is intuitive and user-friendly. The software has
+conduct user testing to gather feedback for usability improvements.
 
 % =================================================================
 
